[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "affiliate-agent-content-creator"
version = "0.1.0"
description = "AI-powered SEO content generation agent for affiliate marketing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "stay4ever" },
]
keywords = [
    "affiliate-marketing",
    "content-generation",
    "seo",
    "copywriting",
    "ai-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
]
dependencies = [
    "anthropic>=0.25",
    "click>=8.1",
    "aiofiles>=23.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-aiofiles>=23.0",
]

[project.scripts]
content-creator = "affiliate_agent_content_creator.entry:main"

[project.urls]
Homepage = "https://github.com/stay4ever/affiliate-agent-content-creator"
Repository = "https://github.com/stay4ever/affiliate-agent-content-creator"
Issues = "https://github.com/stay4ever/affiliate-agent-content-creator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/affiliate_agent_content_creator"]

# ---------------------------------------------------------------------------
# Ruff — linting & formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

# ---------------------------------------------------------------------------
# Mypy — type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
packages = ["affiliate_agent_content_creator"]
strict = true
warn_return_any = true
warn_unused_configs = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
